--- a/3/A9/index.html
+++ b/3/A9/index.html
@@ -10,20 +10,24 @@
 
 <body>
     <img class="bg" src="../A9/images/background.png" alt="이미지">
-</body>
+
     <input type="radio" name="lr1" id="lr1">
-    <label for="lr1" class="right first red">></label>
+    <label for="lr1" class="right first red">&gt;</label>
     <input type="radio" name="lr1" id="lr2" checked>
-    <label for="lr2" class="left second red"><</label>
+    <label for="lr2" class="left second red">&lt;</label>
     <input type="radio" name="lr2" id="lr3">
-    <label for="lr3" class="right second gr">></label>
+    <label for="lr3" class="right second gr">&gt;</label>
     <input type="radio" name="lr2" id="lr4" checked>
-    <label for="lr4" class="left first gr"><</label>
-    <div class="left third blue"><</div>
-    <div class="right third blue">></div>
+    <label for="lr4" class="left first gr">&lt;</label>
+    <div class="left third blue">&lt;</div>
+    <div class="right third blue">&gt;</div>
     <section class="gallery-contents">
         <div class="gallery-content">
-            <div class="content"></div>
+            <div class="content">
+                <img src="images/1.jpg" alt="이미지 1">
+            </div>
         </div>
     </section>
+</body>
+
 </html>
