A9 애니메이션 없는 슬라읻더까지

--- a/3/A9/index.html
+++ b/3/A9/index.html
@@ -10,21 +10,49 @@
 
 <body>
     <img class="bg" src="../A9/images/background.png" alt="이미지">
-
-    <input type="radio" name="lr1" id="lr1">
-    <label for="lr1" class="right first red">&gt;</label>
-    <input type="radio" name="lr1" id="lr2" checked>
-    <label for="lr2" class="left second red">&lt;</label>
-    <input type="radio" name="lr2" id="lr3">
-    <label for="lr3" class="right second gr">&gt;</label>
-    <input type="radio" name="lr2" id="lr4" checked>
+    
+    <input type="radio" name="lr2" id="lr4" checked hidden>
     <label for="lr4" class="left first gr">&lt;</label>
+    <input type="radio" name="lr1" id="lr2" checked hidden>
+    <label for="lr2" class="left second red">&lt;</label>
+    <input type="radio" name="lr1" id="lr1" hidden>
+    <label for="lr1" class="right first red">&gt;</label>
+    <input type="radio" name="lr2" id="lr3" hidden>
+    <label for="lr3" class="right second gr">&gt;</label>
     <div class="left third blue">&lt;</div>
     <div class="right third blue">&gt;</div>
     <section class="gallery-contents">
         <div class="gallery-content">
             <div class="content">
                 <img src="images/1.jpg" alt="이미지 1">
+            </div>
+            <div class="content">
+                <img src="images/2.jpg" alt="이미지 2">
+            </div>
+            <div class="content">
+                <img src="images/3.jpg" alt="이미지 3">
+            </div>
+        </div>
+        <div class="gallery-content">
+            <div class="content">
+                <img src="images/4.jpg" alt="이미지 4">
+            </div>
+            <div class="content">
+                <img src="images/5.jpg" alt="이미지 5">
+            </div>
+            <div class="content">
+                <img src="images/6.jpg" alt="이미지 6">
+            </div>
+        </div>
+        <div class="gallery-content">
+            <div class="content">
+                <img src="images/7.jpg" alt="이미지 7">
+            </div>
+            <div class="content">
+                <img src="images/8.jpg" alt="이미지 8">
+            </div>
+            <div class="content">
+                <img src="images/9.jpg" alt="이미지 9">
             </div>
         </div>
     </section>
