A9 애니메이션 추가

--- a/3/A9/index.html
+++ b/3/A9/index.html
@@ -10,17 +10,17 @@
 
 <body>
     <img class="bg" src="../A9/images/background.png" alt="이미지">
-    
+
     <input type="radio" name="lr1" id="lr1" hidden>
-    <label for="lr1" class="right first red">&gt;</label>
-    <input type="radio" name="lr2" id="lr3" hidden>
-    <label for="lr3" class="right second gr">&gt;</label>
-    <input type="radio" name="lr2" id="lr4" checked hidden>
-    <label for="lr4" class="left first gr">&lt;</label>
+    <label for="lr1" class="right first">&gt;</label>
     <input type="radio" name="lr1" id="lr2" checked hidden>
-    <label for="lr2" class="left second red">&lt;</label>
-    <div class="left third blue">&lt;</div>
-    <div class="right third blue">&gt;</div>
+    <label for="lr2" class="left second">&lt;</label>
+    <input type="radio" name="lr2" id="lr3" hidden>
+    <label for="lr3" class="right second">&gt;</label>
+    <input type="radio" name="lr2" id="lr4" checked hidden>
+    <label for="lr4" class="left first">&lt;</label>
+    <div class="left third">&lt;</div>
+    <div class="right third">&gt;</div>
     <section class="gallery-contents">
         <div class="gallery-content">
             <div class="content">
