--- a/3/A9/index.html
+++ b/3/A9/index.html
@@ -25,6 +25,9 @@
         <div class="gallery-content">
             <div class="content">
                 <img src="images/1.jpg" alt="이미지 1">
+                <p class="title">
+                    삼나무와 초록 밀밭,Cypresses and Green Wheat Field,Vincent van Gogh,1889,1.jpg
+                </p>
             </div>
             <div class="content">
                 <img src="images/2.jpg" alt="이미지 2">
