A9 텍스트는 나중에..

--- a/3/A9/index.html
+++ b/3/A9/index.html
@@ -12,15 +12,15 @@
     <img class="bg" src="../A9/images/background.png" alt="이미지">
 
     <input type="radio" name="lr1" id="lr1" hidden>
-    <label for="lr1" class="right first">&gt;</label>
+    <label for="lr1" class="right first"><img src="images/right-arrow.png" alt="" class="arrow"></label>
     <input type="radio" name="lr1" id="lr2" checked hidden>
-    <label for="lr2" class="left second">&lt;</label>
+    <label for="lr2" class="left second"><img src="images/left-arrow.png" alt="" class="arrow"></label>
     <input type="radio" name="lr2" id="lr3" hidden>
-    <label for="lr3" class="right second">&gt;</label>
+    <label for="lr3" class="right second"><img src="images/right-arrow.png" alt="" class="arrow"></label>
     <input type="radio" name="lr2" id="lr4" checked hidden>
-    <label for="lr4" class="left first">&lt;</label>
-    <div class="left third">&lt;</div>
-    <div class="right third">&gt;</div>
+    <label for="lr4" class="left first"><img src="images/left-arrow.png" alt="" class="arrow"></label>
+    <div class="left third"><img src="images/left-arrow.png" alt="" class="arrow"></div>
+    <div class="right third"><img src="images/right-arrow.png" alt="" class="arrow"></div>
     <section class="gallery-contents">
         <div class="gallery-content">
             <div class="content">
