--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -21,7 +21,10 @@
                 <li class="nav">띵커벨</li>
                 <li class="nav">클래스룸</li>
             </ul>
-            <ul class="right-nav"></ul>
+            <ul class="right-nav">
+                <li class="nav">로그인</li>
+                <li class="nav">고객센터</li>
+            </ul>
         </nav>
     </div>
     <section class="visual-container">
