--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -28,6 +28,9 @@
         </nav>
     </div>
     <section class="visual-container">
+        <header class="search-area">
+            
+        </header>
     </section>
 </body>
 
