--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -29,7 +29,13 @@
     </div>
     <section class="visual-container">
         <header class="search-area">
-            
+            <img src="" alt="로고">
+            <div class="shortcuts">
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
+            </div>
+            <input type="text" class="searchbar">
         </header>
     </section>
 </body>
