--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -35,7 +35,8 @@
                 <a href="#"></a>
                 <a href="#"></a>
             </div>
-            <input type="text" class="searchbar">
+            <input type="text" class="searchbar" placeholder="독감주의 KF94 마스크 100매 18,900원">
+            <div class="ser">검색</div>
         </header>
     </section>
 </body>
