--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -38,6 +38,9 @@
             <input type="text" class="searchbar" placeholder="독감주의 KF94 마스크 100매 18,900원">
             <div class="ser">검색</div>
         </header>
+        <nav class="nav-bar nav-bar-2">
+            <input type="checkbox" name="list">
+        </nav>
     </section>
 </body>
 
