--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -39,7 +39,15 @@
             <div class="ser">검색</div>
         </header>
         <nav class="nav-bar nav-bar-2">
-            <input type="checkbox" name="list">
+            <input type="checkbox" name="list" hidden>
+            <label for="list">햄버거 버튼</label>
+            <ul class="nav">
+                <li class="nav">좋은책방</li>
+                <li class="nav">체험티켓</li>
+                <li class="nav">베스트</li>
+                <li class="nav">신상품</li>
+                <li class="nav">기획전</li>
+            </ul>
         </nav>
     </section>
 </body>
