--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -39,9 +39,11 @@
             <div class="ser">검색</div>
         </header>
         <nav class="nav-bar nav-bar-2">
-            <input type="checkbox" name="list" hidden>
+            <input type="checkbox" name="list" id="list" hidden>
             <label for="list">햄버거 버튼</label>
-            <ul class="nav">
+            <label for="list">엑스 버튼</label>
+            
+            <ul class="nav" style="margin-left: 75px;">
                 <li class="nav">좋은책방</li>
                 <li class="nav">체험티켓</li>
                 <li class="nav">베스트</li>
@@ -49,6 +51,11 @@
                 <li class="nav">기획전</li>
             </ul>
         </nav>
+        <div class="silde-container">
+            <div class="slide-content">
+
+            </div>
+        </div>
     </section>
 </body>
 
