--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -42,7 +42,9 @@
             <input type="checkbox" name="list" id="list" hidden>
             <label for="list">햄버거 버튼</label>
             <label for="list">엑스 버튼</label>
-            
+            <div class="toggle-display">
+
+            </div>
             <ul class="nav" style="margin-left: 75px;">
                 <li class="nav">좋은책방</li>
                 <li class="nav">체험티켓</li>
