--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -57,6 +57,9 @@
             <div class="slide-content">
 
             </div>
+            <div class="slide-content">
+
+            </div>
         </div>
     </section>
 </body>
