--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -53,14 +53,14 @@
                 <li class="nav">기획전</li>
             </ul>
         </nav>
-        <div class="silde-container">
+        <section class="slide-container">
             <div class="slide-content">
 
             </div>
             <div class="slide-content">
 
             </div>
-        </div>
+        </section>
     </section>
 </body>
 
