--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -60,6 +60,15 @@
             <div class="slide-content">
 
             </div>
+            <div class="slide-content">
+
+            </div>
+            <div class="slide-content">
+
+            </div>
+            <div class="slide-content">
+
+            </div>
         </section>
     </section>
 </body>
