--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -70,6 +70,17 @@
 
             </div>
         </section>
+        <section class="yeotbogi">
+            <p class="yeotbogi-title">
+                다른 학부모님 장바구니 엿보기
+            </p>
+            <ul class="yeotbogi-navs">
+                <li class="yeotbogi-nav selected">BEST</li>
+                <li class="yeotbogi-nav">겨울 핫템</li>
+                <li class="yeotbogi-nav">난방용품</li>
+                <li class="yeotbogi-nav">학습 효율 UP!</li>
+            </ul>
+        </section>
     </section>
 </body>
 
