--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -74,12 +74,40 @@
             <p class="yeotbogi-title">
                 다른 학부모님 장바구니 엿보기
             </p>
-            <ul class="yeotbogi-navs">
-                <li class="yeotbogi-nav selected">BEST</li>
-                <li class="yeotbogi-nav">겨울 핫템</li>
-                <li class="yeotbogi-nav">난방용품</li>
-                <li class="yeotbogi-nav">학습 효율 UP!</li>
-            </ul>
+            <div class="yeotbogi-content-area">
+                <ul class="yeotbogi-navs">
+                    <input type="radio" name="y-category" id="y1" checked hidden>
+                    <label for="y1" class="yeotbogi-nav">BEST</label>
+                    <input type="radio" name="y-category" id="y2" hidden>
+                    <label for="y2" class="yeotbogi-nav">겨울 핫템</label>
+                    <input type="radio" name="y-category" id="y3" hidden>
+                    <label for="y3" class="yeotbogi-nav">난방용품</label>
+                    <input type="radio" name="y-category" id="y4" hidden>
+                    <label for="y4" class="yeotbogi-nav">학습 효율 UP!</label>
+                </ul>
+                <div class="yeotbogi-contents" id="yeot1">
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">아이스크림미디어</p>
+                        <p class="content-name">★온라인최저가★ [비움] 에코브리즈 KF 94 마스크 100매 중형/대형 (장당 180원대)</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag best">BEST</div>
+                            <div class="tag free">무료배송</div>
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">아이스크림미디어</p>
+                        <p class="content-name">[한삼인x아이스크림미디어] 하이 튼튼 홍삼 젤리(60포 - 2개월분)</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag best">BEST</div>
+                            <div class="tag free">무료배송</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </section>
 </body>
