--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -106,6 +106,16 @@
                             <div class="tag free">무료배송</div>
                         </div>
                     </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">주식회사 넥스트에너지</p>
+                        <p class="content-name">[강원 춘천] 레고랜드 1일 이용권</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag sales">특가</div>
+                            <div class="tag best">BEST</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
