스크롤 폭 조정 중입니다

--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -116,6 +116,25 @@
                             <div class="tag best">BEST</div>
                         </div>
                     </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">아이스크림미디어</p>
+                        <p class="content-name">★학습환경 1위템★ [펌플렉스] 바른자세 독서쿠션 독서대 레벨업쿠션130</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag new">NEW</div>
+                            <div class="tag best">BEST</div>
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">클릭앤조이</p>
+                        <p class="content-name">에쿠아젠 프로 젤리츄 오메가3 오메가6 어린이 청소년 수험생 ADHD 집중력 영양제 45개</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag best">BEST</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
