슬라이드 해결..?

--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -53,23 +53,25 @@
                 <li class="nav">기획전</li>
             </ul>
         </nav>
-        <section class="slide-container">
-            <div class="slide-content">
+        <div style="width: 100vw; margin-left: calc((100vw - 1280px) / 2 * -1); padding-left: calc((100vw - 1280px) / 2); overflow-x: hidden;">
+            <section class="slide-container">
+                <div class="slide-content">
 
-            </div>
-            <div class="slide-content">
+                </div>
+                <div class="slide-content">
 
-            </div>
-            <div class="slide-content">
+                </div>
+                <div class="slide-content">
 
-            </div>
-            <div class="slide-content">
+                </div>
+                <div class="slide-content">
 
-            </div>
-            <div class="slide-content">
+                </div>
+                <div class="slide-content">
 
-            </div>
-        </section>
+                </div>
+            </section>
+        </div>
         <section class="yeotbogi">
             <p class="yeotbogi-title">
                 다른 학부모님 장바구니 엿보기
