--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -53,7 +53,8 @@
                 <li class="nav">기획전</li>
             </ul>
         </nav>
-        <div style="width: 100vw; margin-left: calc((100vw - 1280px) / 2 * -1); padding-left: calc((100vw - 1280px) / 2); overflow-x: hidden;">
+        <div
+            style="width: 100vw; margin-left: calc((100vw - 1280px) / 2 * -1); padding-left: calc((100vw - 1280px) / 2); overflow-x: hidden;">
             <section class="slide-container">
                 <div class="slide-content">
 
@@ -77,6 +78,7 @@
                 다른 학부모님 장바구니 엿보기
             </p>
             <div class="yeotbogi-content-area">
+                <div style></div>
                 <ul class="yeotbogi-navs">
                     <input type="radio" name="y-category" id="y1" checked hidden>
                     <label for="y1" class="yeotbogi-nav">BEST</label>
