--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -139,6 +139,88 @@
                             <div class="tag best">BEST</div>
                         </div>
                     </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">(주)제이케이엔터프라이즈</p>
+                        <p class="content-name">나오테크 독서대 겸용 무선LED 스탠드 2종 택1</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag best">BEST</div>
+                            <div class="tag free">무료배송</div>
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">아이스크림미디어</p>
+                        <p class="content-name">한걸음 수학 1~6학년 (교과집중 워크북) (1~4학년 개정교과반영)</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">아이스크림미디어 도서출판</p>
+                        <p class="content-name">두근두근 나의 1학년 마음 준비</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                        </div>
+                    </div>
+                </div>
+                <div class="yeotbogi-contents" id="yeot2">
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">주식회사 페이퍼플레인키즈</p>
+                        <p class="content-name">[페이퍼플레인키즈] 아동 털슬리퍼 PK8236</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag best">BEST</div>
+                            <div class="tag free">무료배송</div>
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">주식회사 에스원트레이딩</p>
+                        <p class="content-name">[하버드키즈] 클래식 토글 단추 푸퍼 패딩</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag free">무료배송</div>
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">주식회사 에스원트레이딩</p>
+                        <p class="content-name">[예일키즈] 예일 절개 배색 후드 패딩</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag free">무료배송</div>
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">주식회사 더진엠씨</p>
+                        <p class="content-name">[헨리코튼] HC머프머플러 OMHCD20078</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag free">무료배송</div>
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">(주)블루컴퍼니</p>
+                        <p class="content-name">★최저가 할인★ [내셔널 지오그래픽] 안데스 후드 덕다운 점퍼 N247UDW430</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag free">무료배송</div>
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">(주)정진호이펙트</p>
+                        <p class="content-name">스누아토 크림 200ml(피부 보습보호)</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
