--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -222,6 +222,124 @@
                         </div>
                     </div>
                 </div>
+                <div class="yeotbogi-contents" id="yeot3">
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">주식회사 더진엠씨</p>
+                        <p class="content-name">[TR테디베어] 보온물주머니 핫팩 (디자인/색상 선택)</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag free">무료배송</div>
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">주식회사 더좋은친구들</p>
+                        <p class="content-name">스마일 핫팩 미니/50g/60g/100g/150g 모음전</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag best">BEST</div>
+                            <div class="tag free">무료배송</div>
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">주식회사 제이앤</p>
+                        <p class="content-name">그대에게 따뜻한 온기를 온기핫팩 국내생산 파스형 50g*10개</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">알로코리아 주식회사</p>
+                        <p class="content-name">밤톨이 알밤 양면 손난로 보조배터리 WM503 (5000mAh)</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag free">무료배송</div>
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">주식회사 아이엔리테일</p>
+                        <p class="content-name">한경희 프리미엄 2단 석영관 전기히터 전기난로 HAAN-M100H</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag free">무료배송</div>
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">주식회사 아이랩코퍼레이션</p>
+                        <p class="content-name">[아이랩] 따숨 순간발열 무타공 욕실 온풍기</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag free">무료배송</div>
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">주식회사 아이엔리테일</p>
+                        <p class="content-name">초저소음 강력난방 PTC 욕실난방기 전기 온풍기 HAAN-4000TM</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag free">무료배송</div>
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">주식회사 제이코스</p>
+                        <p class="content-name">[아이리버] 휴대용 엉뜨 USB 전기방석 온열방석 IHP-270U</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag free">무료배송</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="yeotbogi-contents" id="yeot4">
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">(주)유니씨앤씨</p>
+                        <p class="content-name">⭐무료배송⭐JBL JR310BT 어린이 블루투스헤드셋 마이크 헤드폰</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag free">무료배송</div>
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">디센트 주식회사</p>
+                        <p class="content-name">[에인디] 집중력 비염완화에 도움되는 아로마 캔들 아르볼 워머 세트</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">주식회사 다온플러스</p>
+                        <p class="content-name">[슬립앤슬립] 아이유 깊은잠베개+베개커버 세트</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                            <div class="tag free">무료배송</div>
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">디센트 주식회사</p>
+                        <p class="content-name">[에인디] 100% 에센셜 오일 사용 비염완화 및 집중력에 도움되는 리얼 디퓨저 100ml</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                        </div>
+                    </div>
+                    <div class="yeotbogi-content">
+                        <img src="" alt="">
+                        <p class="content-company">클릭앤조이</p>
+                        <p class="content-name">에쿠아젠 프로 젤리츄 오메가3 오메가6 어린이 청소년 수험생 ADHD 집중력 영양제 45개</p>
+                        <p class="content-event">회원 혜택가</p>
+                        <div class="content-tags">
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </section>
