--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -136,7 +136,6 @@
                         <p class="content-name">에쿠아젠 프로 젤리츄 오메가3 오메가6 어린이 청소년 수험생 ADHD 집중력 영양제 45개</p>
                         <p class="content-event">회원 혜택가</p>
                         <div class="content-tags">
-                            <div class="tag best">BEST</div>
                         </div>
                     </div>
                     <div class="yeotbogi-content">
@@ -342,6 +341,15 @@
                 </div>
             </div>
         </section>
+        <div class="AD-content-area">
+            
+        </div>
+        <div class="new-contents-area">
+            <div class="new-contents-header">
+                <p class="new-contents-title">신상품</p>
+                <a href="#" class="view-all">전체보기&gt;</a>
+            </div>
+        </div>
     </section>
 </body>
 
