--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -341,13 +341,27 @@
                 </div>
             </div>
         </section>
-        <div class="AD-content-area">
-            
+        <div class="AD-contents-area">
+            <div class="AD-content"></div>
         </div>
         <div class="new-contents-area">
             <div class="new-contents-header">
                 <p class="new-contents-title">신상품</p>
-                <a href="#" class="view-all">전체보기&gt;</a>
+                <a href="#" class="view-all">전체보기 &gt;</a>
+            </div>
+            <div class="new-contents">
+                <div class="new-content">
+                    
+                </div>
+                <div class="new-content">
+
+                </div>
+                <div class="new-content">
+
+                </div>
+                <div class="new-content">
+
+                </div>
             </div>
         </div>
     </section>
