--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -351,16 +351,60 @@
             </div>
             <div class="new-contents">
                 <div class="new-content">
-                    
+                    <img src="" alt="">
+                    <p class="content-company">주식회사 하이즈홀딩스</p>
+                    <p class="content-name">★출시기념특가★[아망떼] 두꺼운 프리미엄 70평량 고평량 물티슈 70매 10팩/20팩</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag new">NEW</div>
+                        <div class="tag free">무료배송</div>
+                    </div>
                 </div>
                 <div class="new-content">
-
+                    <img src="" alt="">
+                    <p class="content-company">함께늘봄</p>
+                    <p class="content-name">★1월~2월 특별 할인★ [함께늘봄] 창의 기억법 적용 국립중앙박물관 4회차</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag new">NEW</div>
+                    </div>
                 </div>
                 <div class="new-content">
-
+                    <img src="" alt="">
+                    <p class="content-company">(주)코리아보드게임즈</p>
+                    <p class="content-name">[경기 고양 KINTEX] 코리아보드게임즈 패밀리 파크 - 보드게임 테마파크 </p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag new">NEW</div>
+                    </div>
                 </div>
                 <div class="new-content">
-
+                    <img src="" alt="">
+                    <p class="content-company">아이스크림미디어</p>
+                    <p class="content-name">초등 과학 5-1 교과서 [2022개정] (2026)</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag new">NEW</div>
+                    </div>
+                </div>
+                <div class="new-content">
+                    <img src="" alt="">
+                    <p class="content-company">주식회사 하이즈홀딩스</p>
+                    <p class="content-name">★출시기념특가★[아망떼] 두꺼운 프리미엄 70평량 고평량 물티슈 70매 10팩/20팩</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag new">NEW</div>
+                        <div class="tag free">무료배송</div>
+                    </div>
+                </div>
+                <div class="new-content">
+                    <img src="" alt="">
+                    <p class="content-company">함께늘봄</p>
+                    <p class="content-name">★1월~2월 특별 할인★ [함께늘봄] 창의 기억법 적용 국립중앙박물관 4회차</p>
+                    <p class="content-event">회원 혜택가</p>
+                    <div class="content-tags">
+                        <div class="tag new">NEW</div>
+                    </div>
                 </div>
             </div>
         </div>
