animation은 더 안 만들겠습니다..

--- a/2주차 과제-2/index.html
+++ b/2주차 과제-2/index.html
@@ -89,7 +89,7 @@
                     <input type="radio" name="y-category" id="y4" hidden>
                     <label for="y4" class="yeotbogi-nav">학습 효율 UP!</label>
                 </ul>
-                <div class="yeotbogi-contents" id="yeot1">
+                <div class="yeotbogi-contents yeot1">
                     <div class="yeotbogi-content">
                         <img src="" alt="">
                         <p class="content-company">아이스크림미디어</p>
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="yeotbogi-contents" id="yeot2">
+                <div class="yeotbogi-contents yeot2">
                     <div class="yeotbogi-content">
                         <img src="" alt="">
                         <p class="content-company">주식회사 페이퍼플레인키즈</p>
@@ -221,7 +221,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="yeotbogi-contents" id="yeot3">
+                <div class="yeotbogi-contents yeot3">
                     <div class="yeotbogi-content">
                         <img src="" alt="">
                         <p class="content-company">주식회사 더진엠씨</p>
@@ -295,7 +295,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="yeotbogi-contents" id="yeot4">
+                <div class="yeotbogi-contents yeot4">
                     <div class="yeotbogi-content">
                         <img src="" alt="">
                         <p class="content-company">(주)유니씨앤씨</p>
@@ -387,23 +387,22 @@
                         <div class="tag new">NEW</div>
                     </div>
                 </div>
-                <div class="new-content">
+            </div>
+        </div>
+        <div class="new-contents-area"><!-- best contents area -->
+            <div class="new-contents-header">
+                <p class="new-contents-title">베스트</p>
+                <a href="#" class="view-all">전체보기 &gt;</a>
+            </div>
+            <div class="best-contents">
+                <div class="best-content">
+                    <div class="num">1</div>
                     <img src="" alt="">
-                    <p class="content-company">주식회사 하이즈홀딩스</p>
-                    <p class="content-name">★출시기념특가★[아망떼] 두꺼운 프리미엄 70평량 고평량 물티슈 70매 10팩/20팩</p>
+                    <p class="content-company">(주)정진호이펙트</p>
+                    <p class="content-name">스누아토 크림 200ml(피부 보습보호)</p>
                     <p class="content-event">회원 혜택가</p>
                     <div class="content-tags">
-                        <div class="tag new">NEW</div>
-                        <div class="tag free">무료배송</div>
-                    </div>
-                </div>
-                <div class="new-content">
-                    <img src="" alt="">
-                    <p class="content-company">함께늘봄</p>
-                    <p class="content-name">★1월~2월 특별 할인★ [함께늘봄] 창의 기억법 적용 국립중앙박물관 4회차</p>
-                    <p class="content-event">회원 혜택가</p>
-                    <div class="content-tags">
-                        <div class="tag new">NEW</div>
+                        <div class="tag best">BEST</div>
                     </div>
                 </div>
             </div>
